--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.9",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^6.0.2",
+    "gh-pages": "^6.3.0",
     "sass-embedded": "^1.96.0",
     "unplugin-fonts": "^1.4.0",
     "vite": "^7.2.7",
